Build smart convertor

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,11 @@ android {
         version = release(36)
     }
 
+    buildFeatures {
+        viewBinding true
+    }
+
+
     defaultConfig {
         applicationId "com.example.firstapp"
         minSdk 24
